maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:29: error: ';' expected but 'else' found.
          else{right()
          ^WallFollowerMaze:38: error: Unmatched closing brace '}' ignored here
}
^